<resources>
    <string name="app_name">TravelExperts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--    code by jack-->
    <string name="menu_login">Login</string>
    <string name="menu_mybooking">My Bookings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_packages">Vacation Packages</string>
    <string name="menu_myInfo">My Profile</string>

    <string name="customerId">Id</string>
    <string name="custFirstName">First Name</string>
    <string name="custLastName">Last Name</string>
    <string name="custAddress">Address</string>
    <string name="custCity">City</string>
    <string name="custProv">Province</string>
    <string name="custPostal">Postal</string>
    <string name="custCountry">Country</string>
    <string name="custHomePhone">Home Phone</string>
    <string name="custBusPhone">Bussiness Phone</string>
    <string name="custEmail">Email</string>
    <string name="agentId">Agent Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="createaccount">New User? Sign Up Now!</string>

    <!-- end of code by jack-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>