<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_170"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/register"
            android:title="Register" />
        <item
            android:id="@+id/messageFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/agent_24"
            android:title="Agent" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_mybooking"
            android:icon="@drawable/book_170"
            android:title="@string/menu_mybooking" />
    </group>
</menu>