<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelexperts.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_go"
            app:destination="@id/messageFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.travelexperts.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.travelexperts.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.example.travelexperts.MessageFragment"
        android:label="Agent Messenger"
        tools:layout="@layout/fragment_message" />
    <activity
        android:id="@+id/nav_login"
        android:name="com.example.travelexperts.ui.login.LoginActivity"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login"
        />
    <activity
        android:id="@+id/nav_mybooking"
        android:name="com.example.travelexperts.ui.mybooking.MyBookingActivity"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_login"
        />
    <activity
        android:id="@+id/nav_register"
        android:name="com.example.travelexperts.RegisterActivity"
        android:label="Register"
        tools:layout="@layout/activity_register" />
    <activity
        android:id="@+id/nav_profile"
        android:name="com.example.travelexperts.ui.customerinfo.CustomerInfoActivity"
        android:label="@string/menu_login"
        tools:layout="@layout/activity_customerinfo"
        />
    <activity
        android:id="@+id/nav_packages"
        android:name="com.example.travelexperts.ui.vacationpackage.VacationPackageActivity"
        android:label="@string/menu_packages"
        tools:layout="@layout/activity_vacationpackage"
        />
</navigation>