<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.customerinfo.CustomerInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <!-- First Name -->
        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/custFirstName"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintEnd_toEndOf="@+id/tvFirstName" />

        <!-- Last Name -->
        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custLastName"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName"
            app:layout_constraintStart_toStartOf="@+id/tvLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Address -->
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custAddress"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress"
            app:layout_constraintStart_toStartOf="@+id/tvAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- City -->
        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custCity"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/tvCity"
            app:layout_constraintStart_toStartOf="@+id/tvCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Province -->
        <TextView
            android:id="@+id/tvProvince"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custProv"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtCity"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtProv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/tvProvince"
            app:layout_constraintStart_toStartOf="@+id/tvProvince"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Postal Code -->
        <TextView
            android:id="@+id/tvPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custPostal"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtProv"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtPostal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/tvPostalCode"
            app:layout_constraintStart_toStartOf="@+id/tvPostalCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Country -->
        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custCountry"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtPostal"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/tvCountry"
            app:layout_constraintStart_toStartOf="@+id/tvCountry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Home Phone -->
        <TextView
            android:id="@+id/tvHomePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custHomePhone"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/edtCountry"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtHomePhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/tvHomePhone"
            app:layout_constraintStart_toStartOf="@+id/tvHomePhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Business Phone -->
        <TextView
            android:id="@+id/tvBusPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custBusPhone"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/edtHomePhone"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtBusPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/tvBusPhone"
            app:layout_constraintStart_toStartOf="@+id/tvBusPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Email -->
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custEmail"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/edtBusPhone"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Agent ID -->
        <TextView
            android:id="@+id/tvAgentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agentId"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintStart_toStartOf="@+id/tvFirstName"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/edtAgentId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/tvAgentId"
            app:layout_constraintStart_toStartOf="@+id/tvAgentId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>